# genai-examples

./: .gitignore  CHANGELOG.md  Jenkinsfile  README.md
example-chain-basic-actor/: README.md  pyproject.toml
example-chain-basic-actor/basic_actor_chain/: main.py
example-chain-basic-actor/tests/unit/basic_actor_chain/: test_chain.py
example-chain-chat-memory/: README.md  pyproject.toml
example-chain-chat-memory/chat_memory_chain/: chain.py  main.py
example-chain-opensearch/: README.md  pyproject.toml
example-chain-simple-mcp/: README.md  pyproject.toml
example-chain-simple-mcp/scripts/: mcp_client_example.py
example-chain-simple-mcp/simple_mcp_chain/: chain.py  main.py  mcp_tools.py
example-chain-simple-mcp/tests/integration/simple_mcp_chain/: test_mcp_endpoint.py
example-chain-simple-mcp/tests/unit/simple_mcp_chain/: test_chain.py
example-chain-virtualizer/: README.md  pyproject.toml
