[tool.poetry]
name = "simple-mcp-chain"
version = "0.7.0a0"
description = "A chain showing how to embed an MCP server with utility tools in a GenAI chain"
authors = []

[tool.poetry.dependencies]
python = "^3.11"
genai-core = "0.7.0"
# already included in genai-core but we set a fixed version
langchain = "1.2.15"
langgraph = "1.1.8"
langsmith = "0.7.36"

[tool.poetry.group.dev.dependencies]
pytest = "9.0.3"
pytest-asyncio = "1.3.0"
pytest-mock = "3.15.1"
pytest-cov = "7.1.0"
pylint = "4.0.5"
pylintfileheader = "1.1.0"
black = "26.3.1"
isort = "8.0.1"
mypy = "1.20.1"

[tool.poetry.scripts]
build-fat-package = 'genai_core.builder.builder:main'
local-env = 'genai_core.local_env.local_env:main'

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
markers = ["manual: to mark tests as manual"]
addopts = "-m 'not manual'"

[[tool.poetry.source]]
name = "stratio-releases"
# Replace with the genai-api-development-proxy URL for local development.
# See also example-chain-simple-mcp/README.md
#url = "https://genai-developer-proxy-loadbalancer.s000001-genai.k8s.fifteen.labs.stratio.com:8080/service/genai-api/v1/pypi/simple/"
url = "http://qa.int.stratio.com/repository/python-releases/simple/"
priority = "supplemental"

[tool.coverage.run]
omit = [
    "tests/*",
    "scripts/*",
]

[tool.pylint.main]
py-version = "3.11"
ignore-patterns = ["^\\.#"]
ignore-paths = [
    "^tests$",
    "^tests/.*$",
    "^scripts/.*$",
]
load-plugins = ["pylintfileheader"]
file-header = "[\\S\\n\\t\\v ]+© 2025 Stratio Big Data Inc."
file-header-ignore-empty-files = true

[tool.pylint.basic]
no-docstring-rgx = "^_"

[tool.pylint."messages control"]
disable = [
    "raw-checker-failed",
    "bad-inline-option",
    "locally-disabled",
    "file-ignored",
    "suppressed-message",
    "useless-suppression",
    "deprecated-pragma",
    "use-implicit-booleaness-not-comparison-to-string",
    "use-implicit-booleaness-not-comparison-to-zero",
    "use-symbolic-message-instead",
    "too-few-public-methods"
]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.variables]
ignored-argument-names = "_.*|^ignored_|^unused_"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
